--- a/apps/refPortal/rpApi/templates/getReferee.html
+++ b/apps/refPortal/rpApi/templates/getReferee.html
@@ -8,7 +8,7 @@
 </head>
 <body r>
     <h1>הכנס פרטים</h1>
-    <form action="/getRefereeSubmit" method="POST">
+    <form action="/getReferee" method="POST">
         <label for="refId">קוד שופט:</label>
         <input type="number" id="refId" name="refId"><br><br>
 
