--- a/apps/refPortal/rpApi/templates/refreshLeaguesTables.html
+++ b/apps/refPortal/rpApi/templates/refreshLeaguesTables.html
@@ -8,7 +8,7 @@
 </head>
 <body r>
     <h1>הכנס פרטים</h1>
-    <form action="/refreshLeaguesTablesSubmit" method="POST">
+    <form action="/refreshLeaguesTables" method="POST">
         <label for="leagueName">שם ליגה:</label>
         <input type="text" id="leagueName" name="leagueName"><br><br>
 
