--- a/apps/refPortal/rpApi/templates/deactivate.html
+++ b/apps/refPortal/rpApi/templates/deactivate.html
@@ -8,7 +8,7 @@
 </head>
 <body r>
     <h1>הכנס פרטים</h1>
-    <form action="/deactivateSubmit" method="POST">
+    <form action="/deactivate" method="POST">
         <label for="refId">קוד שופט:</label>
         <input type="number" id="refId" name="refId"><br><br>
 
