--- a/apps/refPortal/rpApi/templates/registration.html
+++ b/apps/refPortal/rpApi/templates/registration.html
@@ -8,7 +8,7 @@
 </head>
 <body r>
     <h1>הכנס פרטים</h1>
-    <form action="/registrationSubmit" method="POST">
+    <form action="/registration" method="POST">
         <label for="refId">קוד שופט:</label>
         <input type="number" id="refId" name="refId"><br><br>
 
