--- a/apps/refPortal/rpApi/templates/deactivate.html
+++ b/apps/refPortal/rpApi/templates/deactivate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/favicon.png" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
     <title>ביטול שופט ממערכת התראות מהפורטל</title>
 </head>
 <body r>
