--- a/apps/refPortal/rpApi/templates/registration.html
+++ b/apps/refPortal/rpApi/templates/registration.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/favicon.png" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
     <title>הרשמה למערכת התראות מהפורטל</title>
 </head>
 <body r>
     <h1>הכנס פרטים</h1>
     <form action="/registration" method="POST">
+        <label for="mobileNo">מספר נייד:</label>
+        <input type="text" id="mobileNo" name="mobileNo" value="+9725"><br><br>
+
         <label for="refId">קוד שופט:</label>
         <input type="number" id="refId" name="refId"><br><br>
 
